--- a/overrides/home.html
+++ b/overrides/home.html
@@ -1060,6 +1060,28 @@ video {
                     <p>Quick guide to set up your GL-RM1 Comet</p>
                 </div>
             </a>
+            <!-- box 2 -->
+            <a href="https://dl.gl-inet.com/kvm" target="_blank" class="gl-purple-light flex flex-nowrap items-center bg-gl-purple-light px-8 py-8 hover:bg-gray-100">
+              <div class="rounded-full bg-white flex items-center justify-around p-2 mr-6 w-20 h-20">
+                  <img src="https://static.gl-inet.com/docs/router/en/4/home/icon_2.png" alt="" class="w-10 h-auto" />
+              </div>
+
+              <div class="text-left">
+                  <h3 class="font-bold text-lg mb-2">Firmware</h3>
+                  <p>Keep your devices up-to-date</p>
+              </div>
+          </a>
+          <!-- box 5 -->
+          <a href="https://www.gl-inet.com/app-rm/" target="_blank" class="gl-purple-light flex flex-nowrap items-center bg-gl-purple-light px-8 py-8 hover:bg-gray-100">
+            <div class="rounded-full bg-white flex items-center justify-around p-2 mr-6 w-20 h-20">
+                <img src="https://static.gl-inet.com/docs/router/en/4/home/icon_5.png" alt="" class="w-10 h-auto" />
+            </div>
+
+            <div class="text-left">
+                <h3 class="font-bold text-lg mb-2">App</h3>
+                <p>Remote access your devices</p>
+            </div>
+            </a>
         </div>
     </section>
 
