--- a/overrides/home.html
+++ b/overrides/home.html
@@ -1041,7 +1041,7 @@ video {
             users.
         </p>
 
-        <a type="button" class="text-white font-bold bg-gl-cyan py-3 px-8 rounded-lg hover:bg-gl-black" href="user_guide/gl-rm1/">Get Started</a>
+        <a type="button" class="text-white font-bold bg-gl-cyan py-3 px-8 rounded-lg hover:bg-gl-black" href="user_guide/">Get Started</a>
     </section>
 
     <!--  Find your docs  -->
@@ -1050,30 +1050,30 @@ video {
         <p class="mb-8">Search by categories or topics to find the documentation you need</p>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4 lg:grid-cols-3 lg:gap-8">
             <!-- box 1 -->
-            <a href="user_guide/gl-rm1/" class="gl-purple-light flex flex-nowrap items-center bg-gl-purple-light px-8 py-8 hover:bg-gray-100">
+            <a href="user_guide/" class="gl-purple-light flex flex-nowrap items-center bg-gl-purple-light px-8 py-8 hover:bg-gray-100">
                 <div class="rounded-full bg-white flex items-center justify-around p-2 mr-6 w-20 h-20">
                     <img src="https://static.gl-inet.com/docs/router/en/4/home/icon_1.png" alt="" class="w-10 h-auto" />
                 </div>
 
                 <div class="text-left">
                     <h3 class="font-bold text-lg mb-2">Getting Started</h3>
-                    <p>Quick guide to set up your GL-RM1 Comet</p>
+                    <p>Quick guide to set up your GL.iNet KVM</p>
                 </div>
             </a>
             <!-- box 2 -->
             <a href="https://dl.gl-inet.com/kvm" target="_blank" class="gl-purple-light flex flex-nowrap items-center bg-gl-purple-light px-8 py-8 hover:bg-gray-100">
-              <div class="rounded-full bg-white flex items-center justify-around p-2 mr-6 w-20 h-20">
-                  <img src="https://static.gl-inet.com/docs/router/en/4/home/icon_2.png" alt="" class="w-10 h-auto" />
-              </div>
+                <div class="rounded-full bg-white flex items-center justify-around p-2 mr-6 w-20 h-20">
+                    <img src="https://static.gl-inet.com/docs/router/en/4/home/icon_2.png" alt="" class="w-10 h-auto" />
+                </div>
 
-              <div class="text-left">
-                  <h3 class="font-bold text-lg mb-2">Firmware</h3>
-                  <p>Keep your devices up-to-date</p>
-              </div>
-          </a>
-          <!-- box 5 -->
-          <a href="https://www.gl-inet.com/app-rm/" target="_blank" class="gl-purple-light flex flex-nowrap items-center bg-gl-purple-light px-8 py-8 hover:bg-gray-100">
-            <div class="rounded-full bg-white flex items-center justify-around p-2 mr-6 w-20 h-20">
+                <div class="text-left">
+                    <h3 class="font-bold text-lg mb-2">Firmware</h3>
+                    <p>Keep your devices up-to-date</p>
+                </div>
+            </a>
+            <!-- box 5 -->
+            <a href="https://www.gl-inet.com/app-rm/" target="_blank" class="gl-purple-light flex flex-nowrap items-center bg-gl-purple-light px-8 py-8 hover:bg-gray-100">
+              <div class="rounded-full bg-white flex items-center justify-around p-2 mr-6 w-20 h-20">
                 <img src="https://static.gl-inet.com/docs/router/en/4/home/icon_5.png" alt="" class="w-10 h-auto" />
             </div>
 
@@ -1107,12 +1107,17 @@ video {
             <!-- box 1-->
             <a href="https://forum.gl-inet.com/" target="_blank" class="text-left md:text-center flex flex-row md:flex-col items-center justify-items-start border border-gray-300 rounded-lg py-4 px-3 w-full md:w-auto hover:bg-gray-100">
                 <img src="https://static.gl-inet.com/docs/router/en/4/home/icon_d1.png" alt="" class="w-16 h-auto mr-4 md:mr-0" />
-                <p class="font-bold">Ask the GL.iNet Community</p>
+                <p class="font-bold">Ask GL.iNet Community</p>
             </a>
             <!-- box 2-->
             <a href="mailto:support@glinet.biz" class="text-left md:text-center flex flex-row md:flex-col items-center justify-items-start border border-gray-300 rounded-lg py-4 px-3 w-full md:w-auto hover:bg-gray-100">
                 <img src="https://static.gl-inet.com/docs/router/en/4/home/icon_d2.png" alt="" class="w-16 h-auto mr-4 md:mr-0" />
                 <p class="font-bold">Contact Tech Support</p>
+            </a>
+            <!-- box 3-->
+            <a href="video_library/unboxing_first_set_up/" class="text-left md:text-center flex flex-row md:flex-col items-center justify-items-start border border-gray-300 rounded-lg py-4 px-3 w-full md:w-auto hover:bg-gray-100">
+                <img src="https://static.gl-inet.com/docs/router/en/4/home/icon_d3.png" alt="" class="w-16 h-auto mr-4 md:mr-0" />
+                <p class="font-bold">Watch Unboxing & Setup Videos</p>
             </a>
         </div>
     </section>
